<resources>
    <string name="app_name">Manado</string>
    <string name="userNameEditBox">User Name</string>
    <string name="passWordEditBox">Password</string>
    <string name="loginBox">Log In</string>
    <!-- Login Screen !-->
    <string name="loginAppName">Manado</string>
    <string name="failLoginSnackbar">Invalid Login Credentials</string>
    <string name="registerBox">Create your account</string>

    <!-- Register Screen !-->
    <string name="register_screen_title">Sign up!</string>
    <string name="register_screen_date_selected_example">dd/mm/yyyy</string>
    <string name="register_screen_hint_name">Name</string>
    <string name="register_screen_hint_email">Email</string>
    <string name="register_screen_hint_pw">Password</string>
    <string name="register_screen_btn_pick_date_text">Select Birthday</string>
    <string name="register_screen_btn_create_account_text">Create Account</string>
    <string name="register_screen_btn_already_member_text">Already a member? Login</string>

    <!-- House overview Screen !-->
    <string name="create_house">Build a house</string>
    <string name="join_house_description">Invitations from houses will show up here</string>
    <string name="create_house_description">If your house does not exist yet you can create it below</string>

    <!--Build House Screen !-->
    <string name="build_house_title">Build a house</string>
    <string name="add_users_house">Add roommates!</string>
    <string name="houseName">house name</string>
    <string name="houseAdress">house adress</string>
    <string name="to_homepage_button">To the homepage!</string>



</resources>
