<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.manado.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_above="@+id/editUserNameBox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/userNameEditBox"
        android:id="@+id/editUserNameBox"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/passWordEditBox"
        android:inputType="textPassword"
        android:id="@+id/editPasswordBox"
        android:layout_below="@+id/editUserNameBox"
        android:layout_alignRight="@+id/editUserNameBox"
        android:layout_alignEnd="@+id/editUserNameBox"
        android:layout_marginTop="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBox"
        android:id="@+id/button"
        android:layout_below="@+id/editPasswordBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" />


</RelativeLayout>
