<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgColor"
    tools:context="com.manado.BuildHouseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_house_title"
        android:textSize="@dimen/build_house_screen_title"
        android:id="@+id/buildHouseTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/houseName"
        android:hint="@string/houseName"
        android:background="@color/general_white_edit_text"
        android:paddingLeft="@dimen/general_edit_text_left_padding"
        android:paddingTop="@dimen/general_edit_text_top_padding"
        android:paddingBottom="@dimen/general_edit_text_bot_padding"
        android:layout_below="@+id/buildHouseTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/houseAddress"
        android:background="@color/general_white_edit_text"
        android:paddingLeft="@dimen/general_edit_text_left_padding"
        android:paddingTop="@dimen/general_edit_text_top_padding"
        android:paddingBottom="@dimen/general_edit_text_bot_padding"
        android:hint="@string/houseAdress"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_users_house"
        android:id="@+id/addUserToHouseButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_homepage_button"
        android:id="@+id/toHomePageButton"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/houseAddress"
        android:layout_alignEnd="@+id/houseAddress" />
</RelativeLayout>
