<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/registerMainContent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" /-->

        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_screen_title"
            android:textAlignment="center"
            android:textSize="@dimen/register_screen_title_text_size"
            android:fontFamily="serif-monospace"
            android:textColor="@color/colorPrimaryDark"/>

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="@dimen/register_screen_text_input_layout_top_margin">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/register_screen_hint_name" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_screen_text_input_layout_top_margin"
            android:layout_marginBottom="@dimen/register_screen_text_input_layout_bot_margin">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/register_screen_hint_email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_screen_text_input_layout_top_margin"
            android:layout_marginBottom="@dimen/register_screen_text_input_layout_bot_margin">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/register_screen_hint_pw"/>
        </android.support.design.widget.TextInputLayout>

        <!-- date of birth display and select -->
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/linearLayout2"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_screen_text_input_layout_top_margin"
            android:layout_marginBottom="@dimen/register_screen_text_input_layout_bot_margin">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:text="@string/register_screen_date_selected_example"
                    android:height="@dimen/register_screen_birth_date_text_height"
                    android:textSize="@dimen/register_screen_birth_date_text_size"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_dateofbirth"
                    android:layout_gravity="center_horizontal">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:text="@string/register_screen_btn_pick_date_text"
                    android:height="@dimen/register_screen_btn_pick_date_height"
                    android:textSize="@dimen/register_screen_btn_pick_date_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_pickdate"
                    android:onClick="showDatePickerDialog"
                    android:layout_gravity="center_horizontal">
                </Button>
            </LinearLayout>
        </LinearLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_screen_btn_create_account_top_margin"
            android:layout_marginBottom="@dimen/register_screen_btn_create_account_bot_margin"
            android:padding="@dimen/register_screen_btn_create_account_padding"
            android:text="@string/register_screen_btn_create_account_text"/>

        <TextView android:id="@+id/already_member"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/register_screen_btn_already_member_bot_margin"
            android:text="@string/register_screen_btn_already_member_text"
            android:gravity="center"
            android:textSize="@dimen/register_screen_btn_already_member_text_size"/>

    </LinearLayout>
</ScrollView>