<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context="com.manado.HouseOverviewActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/join_house_description"
        android:textSize="@dimen/title_invitations"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.RecyclerView
        android:layout_weight="3"
        android:id="@+id/invitationRecyclerView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="50dp"
        android:layout_below="@+id/search_users_edit_text"
        android:layout_above="@+id/button2" />

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/create_house_description"
        android:textSize="@dimen/title_create_house"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/buildHouseButton"
        android:layout_alignRight="@+id/invitationRecyclerView"
        android:layout_alignEnd="@+id/invitationRecyclerView" />

    <Button
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/create_house"
        android:id="@+id/buildHouseButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</LinearLayout>
